[gd_scene load_steps=5 format=3 uid="uid://8bhckruw5euc"]

[ext_resource type="Script" uid="uid://baplcc8i3onex" path="res://addons/nodescript/ui/signal_editor.gd" id="1"]
[ext_resource type="Theme" uid="uid://bbkufuj4lk7no" path="res://addons/nodescript/ui/styling/node_script_styling.tres" id="2_i2qdk"]
[ext_resource type="PackedScene" uid="uid://orgselector" path="res://addons/nodescript/ui/org_selector.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://codefooter" path="res://addons/nodescript/ui/code_footer.tscn" id="4_codefooter"]

[node name="SignalEditor" type="PanelContainer"]
custom_minimum_size = Vector2(0, 220)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_i2qdk")
script = ExtResource("1")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_i2qdk")

[node name="VBox" type="VBoxContainer" parent="Margin"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_i2qdk")

[node name="Panel" type="Panel" parent="Margin/VBox"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
theme = ExtResource("2_i2qdk")
theme_type_variation = &"panel_header"

[node name="Header" type="HBoxContainer" parent="Margin/VBox/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme = ExtResource("2_i2qdk")
alignment = 1

[node name="HeaderIcon" type="TextureRect" parent="Margin/VBox/Panel/Header"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
theme = ExtResource("2_i2qdk")
expand_mode = 5
stretch_mode = 5

[node name="Title" type="Label" parent="Margin/VBox/Panel/Header"]
layout_mode = 2
theme = ExtResource("2_i2qdk")
theme_type_variation = &"panel_header_text"
text = "Signal"
horizontal_alignment = 1

[node name="NameRow" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_i2qdk")
theme_override_constants/separation = 8

[node name="NameLabel" type="Label" parent="Margin/VBox/NameRow"]
layout_mode = 2
theme = ExtResource("2_i2qdk")
text = "Name"

[node name="SignalName" type="LineEdit" parent="Margin/VBox/NameRow"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_i2qdk")
placeholder_text = "_ready_signal"

[node name="ParamHeader" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_i2qdk")
theme_override_constants/separation = 8

[node name="ParamTitle" type="Label" parent="Margin/VBox/ParamHeader"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_i2qdk")
theme_override_font_sizes/font_size = 12
text = "Parameters"
vertical_alignment = 1

[node name="ParametersContainer" type="VBoxContainer" parent="Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_i2qdk")
theme_override_constants/separation = 6

[node name="AddParamButton" type="Button" parent="Margin/VBox/ParametersContainer"]
layout_mode = 2
theme = ExtResource("2_i2qdk")
text = "+ Add Parameter"

[node name="OrgSelector" parent="Margin/VBox" instance=ExtResource("3")]
layout_mode = 2

[node name="Spacer" type="Control" parent="Margin/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_i2qdk")

[node name="Signature" type="Panel" parent="Margin/VBox"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
theme = ExtResource("2_i2qdk")
theme_type_variation = &"panel_header"

[node name="SignatureHeader" type="HBoxContainer" parent="Margin/VBox/Signature"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_i2qdk")
theme_override_constants/separation = 6
alignment = 1

[node name="SignatureIcon" type="TextureRect" parent="Margin/VBox/Signature/SignatureHeader"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
theme = ExtResource("2_i2qdk")
expand_mode = 1
stretch_mode = 5

[node name="SignatureTitle" type="Label" parent="Margin/VBox/Signature/SignatureHeader"]
layout_mode = 2
theme = ExtResource("2_i2qdk")
theme_type_variation = &"panel_header_text"
text = "Code Output"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" parent="Margin/VBox" instance=ExtResource("4_codefooter")]
layout_mode = 2
theme = ExtResource("2_i2qdk")
